RESOLVED FIXED29981
REGRESSION (r45945): After pressing Shift-PageDown, pressing Shift-Up extends the top of the selection upwards (but should shrink the selection instead)
https://bugs.webkit.org/show_bug.cgi?id=29981
Summary REGRESSION (r45945): After pressing Shift-PageDown, pressing Shift-Up extends...
Adam Roben (:aroben)
Reported 2009-10-01 14:08:40 PDT
To reproduce: 1. Go to data:text/html,%3Ctextarea%20rows=40%3Etest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%0Atest%3C/textarea%3E 2. Click at least one line below the top of the textarea 3. Press Shift-PageDown 4. Press Shift-Up The top of the selection extends upwards. But the bottom of the extension should shrink upwards, instead. This happens on both Mac and Windows. It did not happen in Safari 4.0.3.
Attachments
Patch (1.22 KB, patch)
2009-10-23 11:08 PDT, Enrica Casucci
no flags
Adam Roben (:aroben)
Comment 1 2009-10-01 14:09:13 PDT
Enrica Casucci
Comment 2 2009-10-23 11:08:19 PDT
Adele Peterson
Comment 3 2009-10-23 12:02:23 PDT
Comment on attachment 41733 [details] Patch I think it should be possible to add a layout test for this.
Adele Peterson
Comment 4 2009-10-23 17:14:47 PDT
Comment on attachment 41733 [details] Patch Clearing the review patch, since Enrica is going to upload a new version w/ a test
Darin Adler
Comment 5 2009-10-25 13:04:05 PDT
My bad. Fix looks good.
Adele Peterson
Comment 6 2009-10-27 11:54:24 PDT
I added a test case, and checked in revision 50165.
Note You need to log in before you can comment on or make changes to this bug.