WebCore: REGRESSION (Safari 4.0.3-ToT): After pressing Shift-PageDown, pressing Shift-Up extends the top of the selection upwards (but should shrink the selection instead) <rdar://problem/7269075> https://bugs.webkit.org/show_bug.cgi?id=29981

Patch by Enrica Casucci <enrica@apple.com> on 2009-10-27
Reviewed by Adele Peterson.

* editing/SelectionController.cpp:
(WebCore::SelectionController::modify): Added setting m_lastChangeWasHorizontalExtension.

LayoutTests: Test for <rdar://problem/7269075> REGRESSION (Safari 4.0.3-ToT): After pressing Shift-PageDown, pressing Shift-Up
extends the top of the selection upwards (but should shrink the selection instead)
https://bugs.webkit.org/show_bug.cgi?id=29981

* editing/selection/shrink-selection-after-shift-pagedown-expected.txt: Added.
* editing/selection/shrink-selection-after-shift-pagedown.html: Added.



Canonical link: https://commits.webkit.org/41610@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50165 268f45cc-cd09-0410-ab3c-d52691b4dbfc